[gd_scene load_steps=4 format=3 uid="uid://yvc3fa1htxh2"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_r5rjg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_5rtcc"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_iuom4"]
radius = 0.6

[node name="Player" type="RigidBody3D"]
input_ray_pickable = false
gravity_scale = 0.0
script = ExtResource("1_r5rjg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_5rtcc")

[node name="PlayerArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerArea"]
shape = SubResource("SphereShape3D_iuom4")

[node name="NextBodyArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NextBodyArea"]
shape = SubResource("SphereShape3D_iuom4")

[node name="IframeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="PlayerArea" to="." method="_on_player_area_area_entered"]
[connection signal="area_exited" from="PlayerArea" to="." method="_on_player_area_area_exited"]
[connection signal="body_entered" from="PlayerArea" to="." method="_on_player_area_body_entered"]
[connection signal="area_exited" from="NextBodyArea" to="." method="_on_next_body_area_area_exited"]
